--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <summary class="cursor-pointer text-lg font-semibold"><i class="fa fa-globe mr-2"></i><span class="t">主站与博客</span><span class="e hidden">Main & Blog</span></summary>
       <ul class="pl-4 mt-2 space-y-2">
         <li><a href="https://www.moxan.top" target="_blank"><i class="fa fa-home mr-2"></i>www.moxan.top</a></li>
+        <li><a href="https://home.moxan.top" target="_blank"><i class="fa fa-home mr-2"></i>实验版Mogo主页</a></li>
         <li><a href="https://cnblogs.com/momotrace" target="_blank"><i class="fa fa-blog mr-2"></i>博客</a></li>
         <li><a href="https://music.163.com/#/playlist?id=8170701761" target="_blank"><i class="fa fa-music mr-2"></i>歌单</a></li>
         <li><a href="https://music.163.com/#/user/home?id=2011267708" target="_blank"><i class="fa fa-user mr-2"></i>Leavetrace</a></li>
@@ -114,7 +115,7 @@
         <li><a href="https://api1.music.moxan.top" target="_blank">音乐 API</a></li>
         <li><a href="https://music.moxan.top" target="_blank">音乐服务</a></li>
         <li><a href="https://cloud2.moxan.top" target="_blank">临时云盘</a></li>
-        <li><a href="https://code.moxan.top" target="_blank">支付（维护中）</a></li>
+        <li><a href="https://pay1.moxan.top" target="_blank">支付（维护中）</a></li>
       </ul>
     </details>
 
