--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       <summary class="cursor-pointer text-lg font-semibold"><i class="fa fa-robot mr-2"></i><span class="t">GPT & 工具</span><span class="e hidden">GPT & Tools</span></summary>
       <ul class="pl-4 mt-2 space-y-2">
         <li><a href="https://gpt.moxan.top" target="_blank"><i class="fa fa-brain mr-2"></i>gpt.moxan.top</a></li>
+        <li><a href="https://jc.moxan.top" target="_blank">默纤网点检测站</a></li>
         <li><a href="https://draw.tool.moxan.top" target="_blank">在线绘画</a></li>
         <li><a href="https://mm.tool.moxan.top" target="_blank">思维导图</a></li>
         <li><a href="https://it.tool.moxan.top" target="_blank">IT 工具</a></li>
