--- a/index.html
+++ b/index.html
@@ -96,17 +96,13 @@
     <details class="group border rounded p-4 bg-gray-100 dark:bg-gray-800">
       <summary class="cursor-pointer text-lg font-semibold"><i class="fa fa-robot mr-2"></i><span class="t">GPT & 工具</span><span class="e hidden">GPT & Tools</span></summary>
       <ul class="pl-4 mt-2 space-y-2">
+        <li><a href="https://pixel.tool.moxan.top" target="_blank">默纤像素图放大站</a></li>
         <li><a href="https://gpt.moxan.top" target="_blank"><i class="fa fa-brain mr-2"></i>gpt.moxan.top</a></li>
         <li><a href="https://jc.moxan.top" target="_blank">默纤网点检测站</a></li>
         <li><a href="https://draw.tool.moxan.top" target="_blank">在线绘画</a></li>
         <li><a href="https://mm.tool.moxan.top" target="_blank">思维导图</a></li>
         <li><a href="https://it.tool.moxan.top" target="_blank">IT 工具</a></li>
         <li><a href="https://ca.tool.moxan.top" target="_blank">数学计算器</a></li>
-        <li><a href="https://fh1.moxan.top" target="_blank">文件快递柜</a></li>
-        <li><a href="https://whois.moxan.top" target="_blank">Whois</a></li>
-        <li><a href="https://os.moxan.top" target="_blank">在线办公</a></li>
-        <li><a href="https://code.moxan.top" target="_blank">在线 VSCode</a></li>
-      </ul>
     </details>
 
     <!-- 其他 -->
@@ -115,8 +111,6 @@
       <ul class="pl-4 mt-2 space-y-2">
         <li><a href="https://api1.music.moxan.top" target="_blank">音乐 API</a></li>
         <li><a href="https://music.moxan.top" target="_blank">音乐服务</a></li>
-        <li><a href="https://cloud2.moxan.top" target="_blank">临时云盘</a></li>
-        <li><a href="https://pay1.moxan.top" target="_blank">支付（维护中）</a></li>
       </ul>
     </details>
 
